# saritasa-s3-tools

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.md  compose.yaml  docker-compose.yaml  mkdocs.yml  pyproject.toml  tasks.py  versions.json
.github/: dependabot.yaml  settings.yaml
.github/workflows/: checks.yaml  publish.yml  run_pre_commit.yaml
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/changelog/: index.html
0.7.0/contributing/: index.html
0.7.0/reference/async_client/client/: index.html
0.7.0/reference/client/: index.html
0.7.0/reference/configs/: index.html
0.7.0/reference/django/drf_fields/: index.html
0.7.0/reference/django/model_fields/: index.html
0.7.0/reference/django/serializers/: index.html
0.7.0/reference/django/shortcuts/: index.html
0.7.0/reference/django/views/: index.html
0.7.0/reference/factory/: index.html
0.7.0/reference/keys/: index.html
0.7.0/reference/testing/plugin/: index.html
0.7.0/reference/testing/shortcuts/: index.html
0.7.0/search/: search_index.json
docs/reference/: client.md  configs.md  factory.md  keys.md
docs/reference/async_client/: client.md
docs/reference/django/: drf_fields.md  model_fields.md  serializers.md  shortcuts.md  views.md
docs/reference/testing/: plugin.md  shortcuts.md
example/: manage.py  settings.py  urls.py
example/app/: apps.py  factories.py  models.py
example/app/api/: serializers.py  views.py
example/app/migrations/: 0001_initial.py
invocations/: project.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/changelog/: index.html
latest/contributing/: index.html
latest/reference/async_client/client/: index.html
latest/reference/client/: index.html
latest/reference/configs/: index.html
latest/reference/django/drf_fields/: index.html
latest/reference/django/model_fields/: index.html
latest/reference/django/serializers/: index.html
latest/reference/django/shortcuts/: index.html
latest/reference/django/views/: index.html
latest/reference/factory/: index.html
latest/reference/keys/: index.html
latest/reference/testing/plugin/: index.html
latest/reference/testing/shortcuts/: index.html
latest/search/: search_index.json
saritasa_s3_tools/: __init__.py  client.py  configs.py  constants.py  factory.py  keys.py
saritasa_s3_tools/async_client/: __init__.py  client.py
saritasa_s3_tools/django/: __init__.py  drf_fields.py  model_fields.py  serializers.py  shortcuts.py  urls.py  views.py
saritasa_s3_tools/testing/: __init__.py  plugin.py  shortcuts.py
tests/: conftest.py  test_async_client.py  test_boto3_resource_from_config.py  test_client.py  test_config.py  test_factory.py
tests/test_django/: conftest.py  test_file_upload.py  test_get_configs.py  test_open_api.py  test_params_validation.py  test_serializers.py
