[project]
name = "saritasa-s3-tools"
dynamic = [
  "version",
]
description = "Tools For S3 Used By Saritasa"
authors = [
    {name = "Saritasa", email = "pypi@saritasa.com"}
]
maintainers = [
    {name = "Stanislav Khlud", email = "stanislav.khlud@saritasa.com"}
]
keywords = [
  "python",
  "aws",
  "s3",
  "boto3",
  "django",
  "drf",
]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Pytest",
]
requires-python = ">=3.11"
dependencies = [
  # The AWS SDK for Python
  # https://boto3.amazonaws.com/v1/documentation/api/latest/index.html
  "boto3",
  # Mypy stubs for boto3
  # https://pypi.org/project/boto3-stubs/#how-to-install
  "boto3-stubs[s3]",
]

[project.optional-dependencies]
async = [
    # AnyIO is an asynchronous networking and concurrency library
    # that works on top of either asyncio or trio.
    # https://anyio.readthedocs.io/en/stable/
    "anyio<5",
]
factory = [
  "factory-boy<4",
  "pillow<13",
]
testing = [
  # HTTPX is a fully featured HTTP client for Python 3, which provides sync and async APIs, and support for both HTTP/1.1 and HTTP/2.
  # https://www.python-httpx.org/
  "httpx<1",
]
django = [
  # Django framework
  # https://www.djangoproject.com/
  "django<7",
  # Storage to AWS S3
  # https://django-storages.readthedocs.io/en/latest/
  "django-storages[boto3]<2",
  # Django REST Framework
  # https://www.django-rest-framework.org/
  "djangorestframework<4",
  # Python humanize functions
  # https://python-humanize.readthedocs.io/en/latest/
  "humanize<5",
]
django-openapi = [
  # OpenApi auto specs generator
  # https://drf-spectacular.readthedocs.io/en/latest/
  "drf-spectacular<1",
]
all = [
  "anyio<5",
  "factory-boy<4",
  "pillow<13",
  "httpx<1",
  "django<7",
  "django-storages[boto3]<2",
  "djangorestframework<4",
  "humanize<5",
  "drf-spectacular<1",
]

[dependency-groups]
local = [
    "ipython>0",
    # Exports functions to access the IPython debugger, which features tab completion, syntax highlighting, better tracebacks
    # https://github.com/gotcha/ipdb
    "ipdb>0",
    # A framework for managing and maintaining multi-language pre-commit hooks.
    # https://pre-commit.com/
    "pre-commit>0",
    # Collection of invoke commands which used in Saritasa organization
    # https://github.com/saritasa-nest/saritasa-python-invocations/
    "saritasa-invocations[env_settings]>0",
    # A library and CLI app for rendering project templates.
    # https://copier.readthedocs.io/en/latest/
    "copier>0",
]
linters = [
    # Mypy is a static type checker for Python.
    # https://mypy.readthedocs.io/en/stable/
    "mypy>0",
]
docs = [
  # Project documentation with Markdown.
  # https://www.mkdocs.org/
  "mkdocs>0",
  # A powerful documentation framework on top of MkDocs
  # https://squidfunk.github.io/mkdocs-material/
  "mkdocs-material>0",
  # Automatic documentation from sources, for MkDocs
  # https://mkdocstrings.github.io/
  "mkdocstrings[python]>0",
  # Manage multiple versions of your MkDocs-powered documentation
  # https://github.com/jimporter/mike
  "mike>0",
]
test = [
  # Makes it easy to write small tests, yet scales to support complex functional testing
  # https://github.com/pytest-dev/pytest/
  "pytest<10.0.0",
  # To prettify pytest output
  # https://github.com/Teemu/pytest-sugar
  "pytest-sugar<2",
  # Allows you to use fixtures in @pytest.mark.parametrize.
  # https://pypi.org/project/pytest-lazy-fixtures/
  "pytest-lazy-fixtures<2",
  # Coverage.py is a tool for measuring code coverage of Python programs.
  # It monitors your program, noting which parts of the code have been executed,
  # then analyzes the source to identify code that could have been executed but was not.
  # https://coverage.readthedocs.io/en/latest/
  "coverage<8",
  # Django related stuff
  # Provides useful tools for testing Django apps
  # Docs https://pytest-django.readthedocs.io/en/latest/
  "pytest-django<5",
  # Provide management command to check if primary database is ready to accept
  # connections
  # https://github.com/painless-software/django-probes
  "django-probes<2",
  # Different useful Django utils
  # https://django-extensions.readthedocs.io/en/latest/
  "django-extensions<5",
  # Psycopg 3 is a modern implementation of a PostgreSQL adapter for Python.
  # https://psycopg.org/
  # Needed for sync support
  "psycopg[binary]<4",
]

[project.urls]
Documentation = "https://saritasa-nest.github.io/saritasa-s3-tools/latest/"
Repository = "https://github.com/saritasa-nest/saritasa-s3-tools"
Changelog = "https://saritasa-nest.github.io/saritasa-s3-tools/changelog/"
Releases = "https://github.com/saritasa-nest/saritasa-s3-tools/releases/"
"Bug Tracker" = "https://github.com/saritasa-nest/saritasa-s3-tools/issues/"
Contributing ="https://saritasa-nest.github.io/saritasa-s3-tools/contributing/"

[project.entry-points.pytest11]
saritasa_s3_tools_plugin = "saritasa_s3_tools.testing.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.version]
# https://regex101.com/r/b6WRcJ/1
pattern = "(?<=^## )(?P<version>(\\d{1,2}\\.\\d{1,2}\\.\\d{1,3})).*$"
path = "CHANGELOG.md"
[tool.hatch.build.targets.wheel]
packages = [
  "saritasa_s3_tools"
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
extend-select = [
  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "W",
  "E",
  # https://docs.astral.sh/ruff/rules/#mccabe-c90
  "C90",
  # https://docs.astral.sh/ruff/rules/#isort-i
  "I",
  # https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "N",
  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "D",
  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "UP",
  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "ANN",
  # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "S",
  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "B",
  # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "A",
  # https://docs.astral.sh/ruff/rules/#flake8-commas-com
  "COM",
  # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
  "C4",
  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
  "DTZ",
  # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
  "T10",
  # https://docs.astral.sh/ruff/rules/#flake8-print-t20
  "T20",
  # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
  "PT",
  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "SIM",
  # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
  "PTH",
  # https://docs.astral.sh/ruff/rules/#flake8-todos-td
  "TD",
  # https://docs.astral.sh/ruff/rules/#eradicate-era
  "ERA",
  # https://docs.astral.sh/ruff/rules/#tryceratops-try
  "TRY",
  # https://docs.astral.sh/ruff/rules/#flynt-fly
  "FLY",
  # https://docs.astral.sh/ruff/rules/#perflint-perf
  "PERF",
  # https://docs.astral.sh/ruff/rules/#refurb-furb
  "FURB",
  # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
  "PIE",
  # https://docs.astral.sh/ruff/rules/#flake8-async-async
  "ASYNC",
  # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "RUF",
]
ignore = [
  # https://docs.astral.sh/ruff/rules/any-type
  "ANN401",
  # https://docs.astral.sh/ruff/rules/missing-type-kwargs
  "ANN003",
  # https://docs.astral.sh/ruff/rules/undocumented-public-module
  "D100",
  # https://docs.astral.sh/ruff/rules/undocumented-public-package
  "D104",
  # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class
  "D106",
  # https://docs.astral.sh/ruff/rules/undocumented-public-init
  "D107",
  # https://docs.astral.sh/ruff/rules/raise-vanilla-args
  "TRY003",
  # https://docs.astral.sh/ruff/rules/try-consider-else
  "TRY300",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  # https://docs.astral.sh/ruff/rules/unused-import
  "F401",
]
"**/tests/*" = [
  # https://docs.astral.sh/ruff/rules/assert
  "S101",
  # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg
  "S106",
  # https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage
  "S311",
]
"**/test_*" = [
  # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function
  "ANN201",
]
[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "boto3",
    "first-party",
    "local-folder",
]
[tool.ruff.lint.isort.sections]
boto3 = [
  "boto3",
  "botocore",
  "mypy_boto3_s3",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "list"
parametrize-values-type = "list"
parametrize-values-row-type = "list"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
ignore_missing_imports = true
strict = false
warn_no_return = false
check_untyped_defs = true
disallow_any_generics = true
exclude = "venv|/.venv"

[[tool.mypy.overrides]]
module = "tests/*"
disable_error_code = [
  "attr-defined",
  "operator",
]

[tool.pyright]
ignore = [
  # Disabled for tests because of dynamic nature of pytest
  "**/*test_*.py",
  "invocations/**"
]

[tool.pytest.ini_options]
# --capture=no
#   allow use of ipdb during tests
# --ff
#   run last failed tests first
addopts = [
    "--capture=no",
    "--ff",
]
# skip all files inside following dirs
norecursedirs = [
    "venv",
    ".venv",
]
# Configure warning that can be ignored
filterwarnings = [
  # Ignore datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version.
  # Can be removed once this is released https://github.com/boto/boto3/issues/3889
  "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore.auth.*:",
]
# set Django settings
DJANGO_SETTINGS_MODULE = "example.settings"
# Configuration for s3
s3_endpoint_url = "http://s3.minio.localhost:9001"
s3_region="us-west-1"
s3_access_key="root"
s3_secret_key="rootroot"

[tool.coverage.run]
omit = []

[tool.coverage.report]
include = [
  "saritasa_s3_tools/**",
]
